variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: type int
val stepDone:int = 0
             ^